[package]
name = "nuuro"
version = "0.0.1"
edition = "2018"
authors = ["Juan Villacorta <juanvillacortac@gmail.com>"]
description = "A specialized 2D game library"
documentation = "https://docs.rs/nuuro/"
repository = "https://github.com/juandroid007/nuuro"
readme = "README.md"
keywords = ["2D", "game"]
license = "Apache-2.0"

[dependencies]
byteorder = "1.3.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gl = "0.6.1"
sdl2 = { version = "0.29", default-features = false, features = ["image", "mixer"] }
