[package]
name = "nuuro"
version = "0.0.4"
edition = "2018"
authors = ["Juan Villacorta <juanvillacortac@gmail.com>"]
description = "A specialized 2D game library"
documentation = "https://docs.rs/nuuro/"
repository = "https://github.com/juandroid007/nuuro"
readme = "README.md"
keywords = ["2D", "game"]
license = "Apache-2.0"

[dependencies]
byteorder = "1.3.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gl = { path = "lib/gl" }
# glutin = "0.24"
glutin = "0.20"
image = "0.23.2"
rodio = "0.11.0"
# sdl2 = { version = "0.29", default-features = false, features = ["image"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
