[package]
name = "nuuro_build"
version = "0.0.4"
edition = "2018"
authors = ["Juan Villacorta <juanvillacortac@gmail.com>"]
description = "A specialized 2D game library"
documentation = "https://docs.rs/nuuro/"
repository = "https://github.com/juandroid007/nuuro"
readme = "README.md"
keywords = ["2D", "game"]
license = "Apache-2.0"

[dependencies]
image = "0.15.0"
byteorder = "1.3.2"
regex = "1.3.1"
lazy_static = "1.4.0"
